--- a/index.html
+++ b/index.html
@@ -44,18 +44,104 @@
         </nav>
     </header>
     <main style="padding-top: 95px;">
-        <div id="banner-inicial">
+        <div id="banner-inicial" class="banner">
             <h1>A Opulência se Esvai...</h1>
             <h2>A DECADÊNCIA DO VALE</h2>
         </div>
-        <div id="banner-secundario">
+        <div id="banner-secundario" class="banner">
             <h3>Na início década de 1860, o Império do Brasil já vinha sofrendo de diversas pressões que ameaçavam a continuidade da escravidão no país. O Tráfico já havia cessado,
                 os leilões, sido proibidos, mas a real reviravolta que virou o jogo e possibilitou a aceleração desse processo foi a:
             </h3>
         </div>
-        <div id="Guerra-Civil-Americana">
-            <h1>A GUERRA CIVIL AMERICANA</h1>
+        <section id="Guerra-Civil-Americana">   
+            <div id="fundo-section-confederado" class="banner"><h1>A GUERRA CIVIL AMERICANA</h1></div>
+            <div id="fundo-confederado">
+                <article>
+                    <p>Ocorrida entre 1861 e 1865, a Guerra Civil americana
+                    opôs o norte industrializado e livre ao sul agrícola e
+                    escravocrata. Terminou com a vitória do Norte e o fim
+                    da escravidão nos Estados Unidos. No Brasil, exerceu
+                    profundos impactos. Primeiro, por desestabilizar o
+                    principal mercado consumidor de café brasileiro.
+                    Depois, por deixar o Brasil como único país do mundo a
+                    manter a escravidão. A lei do ventre livre de 1871 foi
+                    uma resposta ao desfecho da Guerra Civil travada em
+                    solo americano.</p>
+                    <p>Ocorrida entre 1861 e 1865, a Guerra Civil americana
+                    opôs o norte industrializado e livre ao sul agrícola e
+                    escravocrata. Terminou com a vitória do Norte e o fim
+                    da escravidão nos Estados Unidos. No Brasil, exerceu
+                    profundos impactos. Primeiro, por desestabilizar o
+                    principal mercado consumidor de café brasileiro.
+                    Depois, por deixar o Brasil como único país do mundo a
+                    manter a escravidão. A lei do ventre livre de 1871 foi
+                    uma resposta ao desfecho da Guerra Civil travada em
+                    solo americano.</p>
+                    <p>Ocorrida entre 1861 e 1865, a Guerra Civil americana
+                    opôs o norte industrializado e livre ao sul agrícola e
+                    escravocrata. Terminou com a vitória do Norte e o fim
+                    da escravidão nos Estados Unidos. No Brasil, exerceu
+                    profundos impactos. Primeiro, por desestabilizar o
+                    principal mercado consumidor de café brasileiro.
+                    Depois, por deixar o Brasil como único país do mundo a
+                    manter a escravidão. A lei do ventre livre de 1871 foi
+                    uma resposta ao desfecho da Guerra Civil travada em
+                    solo americano.</p>
+                    <img src="imagens/Brasao.png" height="200">
+                </article>
+            </div>
+        </section>
+        <div id="banner-secundario" class="banner">
+            <h3>Com o fim da Guerra Civil, o Norte impôs seus desejos anti-escravistas ao Sul, abolindo, assim, a escravidão no território Americano. O Brasil, então, se tornou o único país do mundo a manter a escravidão.
+                A lei do ventre livre de 1871 foi
+                uma resposta ao desfecho da Guerra Civil travada em
+                solo americano:
+            </h3>
         </div>
+        <section id="Lei-do-Ventre-Livre">
+            <div id="fundo-section-ventre" class="banner"><h1>A LEI DO VENTRE LIVRE</h1></div>
+            <div id="fundo-ventre">
+                <article>
+                    <p>Partur sequitur ventrem, ou a prole segue o ventre, era
+um princípio jurídico que estabelecia que a condição
+escrava da mãe estabelecia a condição escrava da
+criança. Foi interrompido com lei elaborada pelo parlamento brasileiro em 1871. Resultou de um amplo
+acordo com os fazendeiros que não viam com bons
+olhos uma legislação que interferia naquilo que consideravam sua propriedade, como era a cria dos
+escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Unidos em 1865. Concedeu
+liberdade a todos os filhos de escravizadas que
+nascessem após a lei, mas acabou por tornar a
+escravidão mais impopular do que ela já se encontrava.
+A esta altura, o Brasil já era um dos últimos países do
+mundo a manter o regime de trabalho compulsório</p>
+                    <p>Partur sequitur ventrem, ou a prole segue o ventre, era
+um princípio jurídico que estabelecia que a condição
+escrava da mãe estabelecia a condição escrava da
+criança. Foi interrompido com lei elaborada pelo parlamento brasileiro em 1871. Resultou de um amplo
+acordo com os fazendeiros que não viam com bons
+olhos uma legislação que interferia naquilo que consideravam sua propriedade, como era a cria dos
+escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Unidos em 1865. Concedeu
+liberdade a todos os filhos de escravizadas que
+nascessem após a lei, mas acabou por tornar a
+escravidão mais impopular do que ela já se encontrava.
+A esta altura, o Brasil já era um dos últimos países do
+mundo a manter o regime de trabalho compulsório</p>
+                    <p>Partur sequitur ventrem, ou a prole segue o ventre, era
+um princípio jurídico que estabelecia que a condição
+escrava da mãe estabelecia a condição escrava da
+criança. Foi interrompido com lei elaborada pelo parlamento brasileiro em 1871. Resultou de um amplo
+acordo com os fazendeiros que não viam com bons
+olhos uma legislação que interferia naquilo que consideravam sua propriedade, como era a cria dos
+escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Unidos em 1865. Concedeu
+liberdade a todos os filhos de escravizadas que
+nascessem após a lei, mas acabou por tornar a
+escravidão mais impopular do que ela já se encontrava.
+A esta altura, o Brasil já era um dos últimos países do
+mundo a manter o regime de trabalho compulsório</p>
+                    <img src="imagens/Brasao.png" height="200">
+                </article>
+            </div>
+        </section>
     </main>
 
 
