--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 </head>
 <body>
     <header>
-        <!-- Botão/Checkbox -->
         <input type="checkbox" id="check-de-menu" hidden>
 
-        <!-- NAV DESKTOP -->
         <nav class="menu-desktop">
             <ul>
                 <li><a href="#Guerra-Civil-Americana">A Guerra</a></li>
@@ -28,10 +26,8 @@
             </ul>
         </nav>
 
-        <!-- Botão hamburguer -->
         <label for="check-de-menu" class="botao-hamburger">☰</label>
 
-        <!-- MENU MOBILE -->
         <nav class="menu-mobile">
             <label for="check-de-menu" class="botao-fechar">&times;</label>
 
@@ -46,7 +42,7 @@
     <main style="padding-top: 95px;">
         <div id="banner-inicial" class="banner">
             <h1>A Opulência se Esvai...</h1>
-            <h2>A DECADÊNCIA DO VALE</h2>
+            <h3>A DECADÊNCIA DO VALE</h3>
         </div>
         <div id="banner-secundario" class="banner">
             <h3>Na início década de 1860, o Império do Brasil já vinha sofrendo de diversas pressões que ameaçavam a continuidade da escravidão no país. O Tráfico já havia cessado,
@@ -54,41 +50,35 @@
             </h3>
         </div>
         <section id="Guerra-Civil-Americana">   
-            <div id="fundo-section-confederado" class="banner"><h1>A GUERRA CIVIL AMERICANA</h1></div>
-            <div id="fundo-confederado">
+            <div id="fundo-section-confederado" class="banner"><h2 class="deg2">A GUERRA CIVIL AMERICANA</h2></div>
+            <div id="fundo-confederado" class="secao">
                 <article>
                     <p>Ocorrida entre 1861 e 1865, a Guerra Civil americana
                     opôs o norte industrializado e livre ao sul agrícola e
-                    escravocrata. Terminou com a vitória do Norte e o fim
-                    da escravidão nos Estados Unidos. No Brasil, exerceu
-                    profundos impactos. Primeiro, por desestabilizar o
-                    principal mercado consumidor de café brasileiro.
-                    Depois, por deixar o Brasil como único país do mundo a
-                    manter a escravidão. A lei do ventre livre de 1871 foi
-                    uma resposta ao desfecho da Guerra Civil travada em
-                    solo americano.</p>
-                    <p>Ocorrida entre 1861 e 1865, a Guerra Civil americana
-                    opôs o norte industrializado e livre ao sul agrícola e
-                    escravocrata. Terminou com a vitória do Norte e o fim
-                    da escravidão nos Estados Unidos. No Brasil, exerceu
-                    profundos impactos. Primeiro, por desestabilizar o
-                    principal mercado consumidor de café brasileiro.
-                    Depois, por deixar o Brasil como único país do mundo a
-                    manter a escravidão. A lei do ventre livre de 1871 foi
-                    uma resposta ao desfecho da Guerra Civil travada em
-                    solo americano.</p>
-                    <p>Ocorrida entre 1861 e 1865, a Guerra Civil americana
-                    opôs o norte industrializado e livre ao sul agrícola e
-                    escravocrata. Terminou com a vitória do Norte e o fim
-                    da escravidão nos Estados Unidos. No Brasil, exerceu
-                    profundos impactos. Primeiro, por desestabilizar o
-                    principal mercado consumidor de café brasileiro.
-                    Depois, por deixar o Brasil como único país do mundo a
-                    manter a escravidão. A lei do ventre livre de 1871 foi
-                    uma resposta ao desfecho da Guerra Civil travada em
-                    solo americano.</p>
-                    <img src="imagens/Brasao.png" height="200">
+                    escravocrata. Naquela época, os proprietários de escravos
+                    sulistas, produtores em sua maioria de algodão, eram responsáveis
+                    por grande parte das importações de café dos Estados Unidos, vindos
+                    do Brasil. A Guerra desviou recursos que iriam para os escravos, focando
+                    agora em fundos militares.</p>
                 </article>
+                <figure>
+                    <img src="imagens/Guerra-Civil-AmericanaWow.jpg" alt="Ilustração comercial das duas frontes de batalha da Guerra de Secessão">
+                    <figcaption>https://m.media-amazon.com/images/I/71xyKDKUY4L._AC_SX679_.jp</figcaption>
+                </figure>
+                <article>
+                    <p>No Brasil, exerceu
+                    profundos impactos. Primeiro, por desestabilizar o
+                    principal mercado consumidor de café brasileiro.
+                    Depois, por deixar o Brasil como único país do mundo a
+                    manter a escravidão. É interessante notar que a queda das
+                    exportações brasileiras de café caiu somente no período da
+                    guerra, voltando anos depois à normalidade. Porém, a solidão do
+                    Brasil como único país escravista não se resolveu.</p>
+                </article>
+                <figure>
+                    <img src="imagens/Tabela.png" alt="Tabela com produtos exportados pelo Brasil no Século XIX, com destaque para a queda do café durante a Guerra">
+                    <figcaption>https://mestresdahistoria.blogspot.com/2012/03/confira-correcao-das-avaliacoes-de_12.html - <span style="color: red;">Destaque Próprio</span></figcaption>
+                </figure>
             </div>
         </section>
         <div id="banner-secundario" class="banner">
@@ -99,8 +89,8 @@
             </h3>
         </div>
         <section id="Lei-do-Ventre-Livre">
-            <div id="fundo-section-ventre" class="banner"><h1>A LEI DO VENTRE LIVRE</h1></div>
-            <div id="fundo-ventre">
+            <div id="fundo-section-ventre" class="banner"><h2 class="deg3">A LEI DO VENTRE LIVRE</h2></div>
+            <div id="fundo-ventre" class="secao">
                 <article>
                     <p>Partur sequitur ventrem, ou a prole segue o ventre, era
 um princípio jurídico que estabelecia que a condição
@@ -108,42 +98,121 @@ escrava da mãe estabelecia a condição escrava da
 criança. Foi interrompido com lei elaborada pelo parlamento brasileiro em 1871. Resultou de um amplo
 acordo com os fazendeiros que não viam com bons
 olhos uma legislação que interferia naquilo que consideravam sua propriedade, como era a cria dos
-escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Unidos em 1865. Concedeu
-liberdade a todos os filhos de escravizadas que
-nascessem após a lei, mas acabou por tornar a
-escravidão mais impopular do que ela já se encontrava.
-A esta altura, o Brasil já era um dos últimos países do
-mundo a manter o regime de trabalho compulsório</p>
-                    <p>Partur sequitur ventrem, ou a prole segue o ventre, era
-um princípio jurídico que estabelecia que a condição
-escrava da mãe estabelecia a condição escrava da
-criança. Foi interrompido com lei elaborada pelo parlamento brasileiro em 1871. Resultou de um amplo
-acordo com os fazendeiros que não viam com bons
-olhos uma legislação que interferia naquilo que consideravam sua propriedade, como era a cria dos
-escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Unidos em 1865. Concedeu
-liberdade a todos os filhos de escravizadas que
-nascessem após a lei, mas acabou por tornar a
-escravidão mais impopular do que ela já se encontrava.
-A esta altura, o Brasil já era um dos últimos países do
-mundo a manter o regime de trabalho compulsório</p>
-                    <p>Partur sequitur ventrem, ou a prole segue o ventre, era
-um princípio jurídico que estabelecia que a condição
-escrava da mãe estabelecia a condição escrava da
-criança. Foi interrompido com lei elaborada pelo parlamento brasileiro em 1871. Resultou de um amplo
-acordo com os fazendeiros que não viam com bons
-olhos uma legislação que interferia naquilo que consideravam sua propriedade, como era a cria dos
-escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Unidos em 1865. Concedeu
-liberdade a todos os filhos de escravizadas que
-nascessem após a lei, mas acabou por tornar a
-escravidão mais impopular do que ela já se encontrava.
-A esta altura, o Brasil já era um dos últimos países do
-mundo a manter o regime de trabalho compulsório</p>
-                    <img src="imagens/Brasao.png" height="200">
+escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Unidos em 1865.
+</p>
                 </article>
+                <figure>
+                    <img src="imagens/leidoventrelivrebb.webp" alt="Charge antiga mostrando a reação de brasileiros ao nascimento de um escravo">
+                    <figcaption>Biblioteca Nacional Digital - Aceesso: Agência Senado</figcaption>
+                </figure>
+                <article>
+                    <p> Concedeu
+liberdade a todos os filhos de escravizadas que
+nascessem após a lei, mas acabou por tornar a
+escravidão mais impopular do que ela já se encontrava.
+A esta altura, o Brasil já era um dos últimos países do
+mundo a manter o regime de trabalho compulsório.
+</p>
+                </article>
+                <figure>
+                    <img src="imagens/representacaoimg.webp" alt="Ilustração de um cafeicultor e 5 escravos crianças seguindo ele">
+                    <figcaption>https://www.brasilianaiconografica.art.br/obras/18691/escravos-nas-ruas-do-rio-de-janeiro</figcaption>
+                </figure>
             </div>
         </section>
+        <div id="banner-secundario" class="banner">
+            <h3>Porém, mesmo com a Lei do Ventre Livre, que acalmou em parte as pressões internacionais para com o Brasil,
+                as pressões internas não se apaziguaram. O movimento abolicionista ainda continuava forte, então uma nova lei
+                foi necessária para acalmá-lo:
+            </h3>
+        </div>
+        <section id="Lei-dos-Sexagenarios">
+            <div id="fundo-section-sexa" class="banner"><h2 class="deg4">A LEI DOS SEXAGENÁRIOS</h2></div>
+            <div id="fundo-sexa" class="secao">
+                <article>
+                    <p>Aprovada em 1885, ficou também conhecida como lei
+Saraiva-Cotegipe, em virtude dos nomes dos ministros
+que a promulgaram. A lei dos sexagenários estipulou
+que os escravizados maiores de 60 anos seriam
+considerados livres a partir da data da promulgação da
+lei.
+</p>
+                </article>
+                <figure>
+                    <img src="imagens/lei-dos-sexagenarios-og.webp" alt="Foto de um casal de escravos idosos dando as mãos com expressões cansadas">
+                    <figcaption>Arquivo do projeto Monumenta - Acesso: ElPais Brasil</figcaption>
+                </figure>
+                <article>
+                    <p> Considerada polêmica ainda durante a apreciação do
+projeto, a lei conferiu aos proprietários como
+contrapartida o direito de usarem os serviços dos ex-escravizados por três anos após a alforria. O escravizado
+também ficou obrigado a manter domicílio no mesmo
+município onde havia sido alforriado. Porém, podemos notar que poucos escravizados chegavam à idade dos 60, então a lei
+só adiantou para poucos.
+</p>
+                </article>
+                <figure>
+                    <img src="imagens/5.jpg" alt="Foto encenada de escravos carregando seus instrumentos de trabalho na frente da Senzala">
+                    <figcaption>https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Slaves_in_coffee_farm_by_marc_ferrez_1885.jpg/960px-Slaves_in_coffee_farm_by_marc_ferrez_1885.jpg</figcaption>
+                </figure>
+            </div>
+        </section>
+
+
+        </section>
+        <div id="banner-secundario" class="banner">
+            <h3>Mesmo com poucos efeitos na prática, a Lei dos Sexagenários e a Lei do Ventre Livre foram essenciais para o fim do sucesso da escravidão
+                no Vale do Paraíba. Essas leis contribuíram para o fim definitivo da escravidão, gradualmente, ela já estava, naquele ponto, em seus últimos suspiros:
+            </h3>
+        </div>
+        <section id="Decadencia-do-Vale">
+            <div id="fundo-section-vale" class="banner"><h2 class="deg1">A DECADÊNCIA DO VALE</h2></div>
+            <div id="fundo-vale" class="secao">
+                <article>
+                    <p>Fenômeno de declínio econômico do Vale do
+Paraíba, a mais antiga área produtora de café no
+Brasil. Foi ocasionado por vários fatores: a
+dependência da mão-de-obra escravizada num
+contexto de crise do sistema escravista eo
+esgotamento dos solos que, desgastados e
+improdutivos, não apresentavam a fertilidade
+inicial.
+</p>
+                </article>
+                <figure>
+                    <img src="imagens/ciddadevale.png" alt="Litografia de uma vila no Vale do Paraíba no século XIX, com montanhas ao fundo">
+                    <figcaption>Litografia de Victor Frond - Acesso: aun.webhostusp.sti.usp.br</figcaption>
+                </figure>
+                <article>
+                    <p> Ademais, houve a concorrência com a nova
+área produtora, mais dinâmica, surgida no interior
+de São Paulo. Somados, levaram as outrora ricas
+fazendas instaladas no vale do Rio Paraíba a
+viverem um lento e permanente declínio social e
+econômico, provocando alterações profundas na
+região.
+
+</p>
+                </article>
+                <figure>
+                    <img src="imagens/ValeParaiba.jpg" alt="Pintura panorâmica de uma fazenda do Vale do Paraíba no século XIX">
+                    <figcaption>Museu Paulista da USP - Acesso: Wikipedia</figcaption>
+                </figure>
+            </div>
+        </section>
+        <div id="banner-secundario" class="banner">
+            <h3>E enfim, o Império do Café do Vale do Paraíba finalmente cai, com a Lei Áurea.
+            </h3>
+            <h3>Leia mais sobre isso clicando <a target="_blank" href="https://edufernades09.github.io/AtoX/">aqui.</a>
+            </h3>
+        </div>
     </main>
 
+    <footer>
+        <p>&copy; 2025 História do Vale Group - Todos os direitos reservados.<br>
+            Feito por: Arthur Fix, Caio Henrique, Eduardo Pinheiro e Ronaldo Alves.
+        </p>
+    </footer>
 
 </body>
 </html>
