--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ só adiantou para poucos.
                 </article>
                 <figure>
                     <img src="imagens/5.jpg" alt="Foto encenada de escravos carregando seus instrumentos de trabalho na frente da Senzala">
-                    <figcaption>https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Slaves_in_coffee_farm_by_marc_ferrez_1885.jpg/960px-Slaves_in_coffee_farm_by_marc_ferrez_1885.jpg</figcaption>
+                    <figcaption>Slaves in coffee farm- Marc FerrezAcesso Biblioteca Nacional</figcaption>
                 </figure>
             </div>
         </section>
@@ -215,4 +215,5 @@ região.
     </footer>
 
 </body>
+
 </html>
