--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     agora em fundos militares.</p>
                 </article>
                 <figure>
-                    <img src="imagens/Guerra-Civil-AmericanaWow.jpg" alt="Ilustração comercial das duas frontes de batalha da Guerra de Secessão">
-                    <figcaption>https://m.media-amazon.com/images/I/71xyKDKUY4L._AC_SX679_.jp</figcaption>
+                    <img src="https://ensina.rtp.pt/site-uploads/2018/03/Civil_War_America-854x480.jpg" alt="Foto de soldados descansando em meio à Guerra da Secessão">
+                    <figcaption>Acesso: RTP Ensina</figcaption>
                 </figure>
                 <article>
                     <p>No Brasil, exerceu
@@ -217,3 +217,4 @@ região.
 </body>
 
 </html>
+
