--- a/index.html
+++ b/index.html
@@ -53,27 +53,15 @@
             <div id="fundo-section-confederado" class="banner"><h2 class="deg2">A GUERRA CIVIL AMERICANA</h2></div>
             <div id="fundo-confederado" class="secao">
                 <article>
-                    <p>Ocorrida entre 1861 e 1865, a Guerra Civil americana
-                    opôs o norte industrializado e livre ao sul agrícola e
-                    escravocrata. Naquela época, os proprietários de escravos
-                    sulistas, produtores em sua maioria de algodão, eram responsáveis
-                    por grande parte das importações de café dos Estados Unidos, vindos
-                    do Brasil. A Guerra desviou recursos que iriam para os escravos, focando
-                    agora em fundos militares.</p>
+                    <p>
+Entre 1861 e 1865, a Guerra Civil americana opôs o Norte industrial e abolicionista ao Sul agrícola e escravocrata. Os fazendeiros sulistas, grandes produtores de algodão, importavam muito café brasileiro. Com o conflito, recursos antes destinados à manutenção da escravidão foram redirecionados para despesas militares, alterando essas dinâmicas econômicas.</p>
                 </article>
                 <figure>
                     <img src="https://ensina.rtp.pt/site-uploads/2018/03/Civil_War_America-854x480.jpg" alt="Foto de soldados descansando em meio à Guerra da Secessão">
                     <figcaption>Acesso: RTP Ensina</figcaption>
                 </figure>
                 <article>
-                    <p>No Brasil, exerceu
-                    profundos impactos. Primeiro, por desestabilizar o
-                    principal mercado consumidor de café brasileiro.
-                    Depois, por deixar o Brasil como único país do mundo a
-                    manter a escravidão. É interessante notar que a queda das
-                    exportações brasileiras de café caiu somente no período da
-                    guerra, voltando anos depois à normalidade. Porém, a solidão do
-                    Brasil como único país escravista não se resolveu.</p>
+                    <p>A Guerra Civil americana afetou profundamente o Brasil ao desestabilizar seu principal mercado de café e deixá-lo como o único país ainda escravista. As exportações de café caíram apenas durante o conflito, retomando depois, mas o isolamento do Brasil em relação à escravidão permaneceu, evidenciando seu atraso frente ao cenário internacional.</p>
                 </article>
                 <figure>
                     <img src="imagens/Tabela.png" alt="Tabela com produtos exportados pelo Brasil no Século XIX, com destaque para a queda do café durante a Guerra">
@@ -92,13 +80,7 @@
             <div id="fundo-section-ventre" class="banner"><h2 class="deg3">A LEI DO VENTRE LIVRE</h2></div>
             <div id="fundo-ventre" class="secao">
                 <article>
-                    <p>Partur sequitur ventrem, ou a prole segue o ventre, era
-um princípio jurídico que estabelecia que a condição
-escrava da mãe estabelecia a condição escrava da
-criança. Foi interrompido com lei elaborada pelo parlamento brasileiro em 1871. Resultou de um amplo
-acordo com os fazendeiros que não viam com bons
-olhos uma legislação que interferia naquilo que consideravam sua propriedade, como era a cria dos
-escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Unidos em 1865.
+                    <p>O princípio partus sequitur ventrem determinava que filhos de mulheres escravizadas também nasciam escravos. Esse critério foi rompido pela Lei do Ventre Livre, de 1871, fruto de negociação com fazendeiros que resistiam a mudanças em sua “propriedade”. A medida respondeu ao impacto internacional do fim da escravidão nos EUA em 1865.
 </p>
                 </article>
                 <figure>
@@ -106,12 +88,7 @@ escravizados. Foi uma resposta necessária ao fim da escravidão nos Estados Uni
                     <figcaption>Biblioteca Nacional Digital - Aceesso: Agência Senado</figcaption>
                 </figure>
                 <article>
-                    <p> Concedeu
-liberdade a todos os filhos de escravizadas que
-nascessem após a lei, mas acabou por tornar a
-escravidão mais impopular do que ela já se encontrava.
-A esta altura, o Brasil já era um dos últimos países do
-mundo a manter o regime de trabalho compulsório.
+                    <p>A Lei do Ventre Livre concedeu liberdade aos filhos de mulheres escravizadas nascidos após 1871, mas também intensificou a impopularidade da escravidão. Nesse momento, o Brasil já figurava entre os últimos países do mundo a manter o trabalho compulsório, evidenciando seu isolamento diante das pressões internacionais e internas pelo fim do regime.
 </p>
                 </article>
                 <figure>
@@ -130,12 +107,7 @@ mundo a manter o regime de trabalho compulsório.
             <div id="fundo-section-sexa" class="banner"><h2 class="deg4">A LEI DOS SEXAGENÁRIOS</h2></div>
             <div id="fundo-sexa" class="secao">
                 <article>
-                    <p>Aprovada em 1885, ficou também conhecida como lei
-Saraiva-Cotegipe, em virtude dos nomes dos ministros
-que a promulgaram. A lei dos sexagenários estipulou
-que os escravizados maiores de 60 anos seriam
-considerados livres a partir da data da promulgação da
-lei.
+                    <p>Aprovada em 1885 e chamada de lei Saraiva-Cotegipe, recebeu esse nome dos ministros que a promulgaram. A Lei dos Sexagenários determinou que escravizados com mais de 60 anos seriam declarados livres a partir de sua promulgação, representando um passo gradual no processo de abolição da escravidão no Brasil.
 </p>
                 </article>
                 <figure>
@@ -143,12 +115,7 @@ lei.
                     <figcaption>Arquivo do projeto Monumenta - Acesso: ElPais Brasil</figcaption>
                 </figure>
                 <article>
-                    <p> Considerada polêmica ainda durante a apreciação do
-projeto, a lei conferiu aos proprietários como
-contrapartida o direito de usarem os serviços dos ex-escravizados por três anos após a alforria. O escravizado
-também ficou obrigado a manter domicílio no mesmo
-município onde havia sido alforriado. Porém, podemos notar que poucos escravizados chegavam à idade dos 60, então a lei
-só adiantou para poucos.
+                    <p> A lei, considerada polêmica desde sua discussão, garantia aos proprietários o direito de usar o trabalho dos libertos por três anos após a alforria e obrigava os ex-escravizados a permanecer no mesmo município. Contudo, poucos chegavam aos 60 anos, fazendo com que seus benefícios atingissem apenas uma pequena parcela da população escravizada.
 </p>
                 </article>
                 <figure>
@@ -169,14 +136,7 @@ só adiantou para poucos.
             <div id="fundo-section-vale" class="banner"><h2 class="deg1">A DECADÊNCIA DO VALE</h2></div>
             <div id="fundo-vale" class="secao">
                 <article>
-                    <p>Fenômeno de declínio econômico do Vale do
-Paraíba, a mais antiga área produtora de café no
-Brasil. Foi ocasionado por vários fatores: a
-dependência da mão-de-obra escravizada num
-contexto de crise do sistema escravista eo
-esgotamento dos solos que, desgastados e
-improdutivos, não apresentavam a fertilidade
-inicial.
+                    <p>O declínio econômico do Vale do Paraíba, antiga região cafeeira do Brasil, ocorreu por diversos fatores. A forte dependência da mão de obra escravizada coincidiu com a crise do sistema escravista, enquanto os solos, intensamente explorados, tornaram-se pobres e improdutivos. Assim, a região perdeu sua capacidade
 </p>
                 </article>
                 <figure>
@@ -184,13 +144,7 @@ inicial.
                     <figcaption>Litografia de Victor Frond - Acesso: aun.webhostusp.sti.usp.br</figcaption>
                 </figure>
                 <article>
-                    <p> Ademais, houve a concorrência com a nova
-área produtora, mais dinâmica, surgida no interior
-de São Paulo. Somados, levaram as outrora ricas
-fazendas instaladas no vale do Rio Paraíba a
-viverem um lento e permanente declínio social e
-econômico, provocando alterações profundas na
-região.
+                    <p> Além disso, a nova e mais dinâmica área produtora surgida no interior paulista aumentou a concorrência. Esses fatores, somados, levaram as antigas e ricas fazendas do Vale do Paraíba a um lento e contínuo declínio social e econômico, transformando profundamente a região e marcando definitivamente sua decadência.
 
 </p>
                 </article>
@@ -217,4 +171,5 @@ região.
 </body>
 
 </html>
+
 
