--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Entre 1861 e 1865, a Guerra Civil americana opôs o Norte industrial e abolicion
             <div id="fundo-section-vale" class="banner"><h2 class="deg1">A DECADÊNCIA DO VALE</h2></div>
             <div id="fundo-vale" class="secao">
                 <article>
-                    <p>O declínio econômico do Vale do Paraíba, antiga região cafeeira do Brasil, ocorreu por diversos fatores. A forte dependência da mão de obra escravizada coincidiu com a crise do sistema escravista, enquanto os solos, intensamente explorados, tornaram-se pobres e improdutivos. Assim, a região perdeu sua capacidade
+                    <p>O declínio econômico do Vale do Paraíba resultou da crise do sistema escravista e da dependência dessa mão de obra, somados ao esgotamento dos solos pela exploração intensa. Assim, a antiga região cafeeira perdeu produtividade e entrou em um processo contínuo de decadência.
 </p>
                 </article>
                 <figure>
@@ -144,8 +144,7 @@ Entre 1861 e 1865, a Guerra Civil americana opôs o Norte industrial e abolicion
                     <figcaption>Litografia de Victor Frond - Acesso: aun.webhostusp.sti.usp.br</figcaption>
                 </figure>
                 <article>
-                    <p> Além disso, a nova e mais dinâmica área produtora surgida no interior paulista aumentou a concorrência. Esses fatores, somados, levaram as antigas e ricas fazendas do Vale do Paraíba a um lento e contínuo declínio social e econômico, transformando profundamente a região e marcando definitivamente sua decadência.
-
+                    <p> Além da concorrência das novas áreas cafeeiras do interior paulista, a combinação desses fatores levou as antigas fazendas do Vale do Paraíba a um lento declínio social e econômico. Com o tempo, a região foi profundamente transformada, marcando de forma definitiva sua decadência.
 </p>
                 </article>
                 <figure>
@@ -171,5 +170,6 @@ Entre 1861 e 1865, a Guerra Civil americana opôs o Norte industrial e abolicion
 </body>
 
 </html>
+
 
 
