--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Entre 1861 e 1865, a Guerra Civil americana opôs o Norte industrial e abolicion
             </div>
         </section>
         <div id="banner-secundario" class="banner">
-            <h3>E enfim, o Império do Café do Vale do Paraíba finalmente cai, com a Lei Áurea.
+            <h3>E enfim, o Império do Café do Vale do Paraíba finalmente cai aos poucos, se encerrando com a Lei Áurea.
             </h3>
             <h3>Leia mais sobre isso clicando <a target="_blank" href="https://edufernades09.github.io/AtoX/">aqui.</a>
             </h3>
@@ -170,6 +170,7 @@ Entre 1861 e 1865, a Guerra Civil americana opôs o Norte industrial e abolicion
 </body>
 
 </html>
+
 
 
 
